brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_read_with_empty_lines.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "read -a arr <<< \"\"\necho \"arr length: ${#arr[@]}\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "read",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-a",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "arr",
                    loc: "[location]",
                  )),
                  IoRedirect(HereString(None, Word(
                    value: "\"\"",
                    loc: "[location]",
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "\"arr length: ${#arr[@]}\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
