brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_standalone_negation.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "!",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            bang: true,
            seq: [],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
