brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_unset_odd_function_names.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "unset -f \"test-func\" \"123func\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "unset",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-f",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "\"test-func\"",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "\"123func\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
